<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lol2kpe.h4u.SignupActivity"
    tools:showIn="@layout/activity_signup">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_alignStart="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="phone"
        android:layout_below="@+id/email"
        android:layout_alignStart="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/phone"
        android:layout_alignStart="@+id/phone" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="wrap_content"
        android:hint="@string/re_password"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password" />

    <Button
        android:id="@+id/signupbutton"
        android:drawableTop="@drawable/ic_signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@+id/repassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />
</RelativeLayout>

